<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mywhite"
    tools:context="com.rocket.src.activities.Homepage">

    <Button
        android:id="@+id/play_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="123dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="123dp"
        android:text="@string/play_button"
        android:backgroundTint="@color/darkgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="123dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="123dp"
        android:text="@string/profile_button"
        android:backgroundTint="@color/darkgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="123dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="123dp"
        android:text="@string/exit_button"
        android:backgroundTint="@color/darkgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

